I don't remember what were the changes

--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Authors</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css" th:href="@{main.css}">
 </head>
 <body>
     <h1>Author List</h1>
@@ -11,9 +11,9 @@
     <table>
         <thead>
             <tr>
-                <td>ID</td>
-                <td>First Name</td>
-                <td>Last Name</td>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
             </tr>
         </thead>
         <tbody>
